2008-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh: Return first line of mtx output if mtx
				     exit with a status != 0.
	* server-src/amtape.c: Display changer error.

2008-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add exit-handling property.

2008-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add normal, ignore and strange property.

2008-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check tape_splitsize < tape length.

2008-10-30  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/find.c server-src/find.h man/xml-source/amadmin.8.xml:
	  add new sort key, 'w', for write_timestamp
	* server-src/amadmin.c: use it
	* server-src/amindexd.c restore-src/amfetchdump.c: use 'w' to prefer
	  the oldest-written copy of a dump

2008-10-30  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar_perl.pl, application-src/amstar.c,
	  application-src/amgtar.c: Implement validate command.
	* server-src/amcheckdump.pl: Execute the validate command of an
				     application.
	* perl/Amanda/Script_App.pm (print_to_server): Add validate.
	* perl/Amanda/Application.pm (known_commands): Add validate.
	* common-src/security-util.c: Fix typo.

2008-10-29  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml
	  man/xml-source/amanda-devices.7.xml: improve device property
	  documentation

2008-10-29  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: taperflush params can be
	  greater than 100%

2008-10-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/fileheader.c (dumpfile_free_data): New function.
	* common-src/fileheader.h (dumpfile_free_data): New prototype.
	* server-src/cmdline.c, server-src/dumper.c,
	  server-src/planner.c, server-src/amadmin.c,
	  server-src/amflush.c, server-src/holding.c,
	  server-src/driver.c, server-src/find.c,